// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Matches the snapshot with basic layout 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-compass"
  >
    <div
      class="pf-v6-c-compass__header pf-m-expanded"
    >
      <div>
        Header
      </div>
    </div>
    <div
      class="pf-v6-c-compass__sidebar pf-m-start pf-m-expanded"
    >
      <div>
        Sidebar start
      </div>
    </div>
    <div
      class="pf-v6-c-compass__main"
    >
      <div>
        Main content
      </div>
    </div>
    <div
      class="pf-v6-c-compass__sidebar pf-m-end pf-m-expanded"
    >
      <div>
        Sidebar end
      </div>
    </div>
    <div
      class="pf-v6-c-compass__footer pf-m-expanded"
    >
      <div>
        Footer
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Matches the snapshot with drawer 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-drawer pf-m-expanded"
  >
    <div
      class="pf-v6-c-drawer__main"
    >
      <div
        class="pf-v6-c-drawer__content"
      >
        <div
          class="pf-v6-c-drawer__body"
        >
          <div
            class="pf-v6-c-compass"
          >
            <div
              class="pf-v6-c-compass__header pf-m-expanded"
            >
              <div>
                Header
              </div>
            </div>
            <div
              class="pf-v6-c-compass__sidebar pf-m-start pf-m-expanded"
            >
              <div>
                Sidebar start
              </div>
            </div>
            <div
              class="pf-v6-c-compass__main"
            >
              <div>
                Main content
              </div>
            </div>
            <div
              class="pf-v6-c-compass__sidebar pf-m-end pf-m-expanded"
            >
              <div>
                Sidebar end
              </div>
            </div>
            <div
              class="pf-v6-c-compass__footer pf-m-expanded"
            >
              <div>
                Footer
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        Drawer content
      </div>
    </div>
  </div>
</DocumentFragment>
`;
